--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>| </title>
+    <title>| Imagem de fundo ajustável | </title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*Shorthand Background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;/*não funcionou na shorthand*/
         }
         main{
             background-color: white;
@@ -26,7 +35,7 @@
 <body>
     <main>
     <h1>imagem de fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit fuga ad deleniti, dolorem facere, temporibus dolorum, officiis necessitatibus fugiat reiciendis minima! Perferendis porro possimus molestiae harum mollitia facilis magni quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur est quam nemo doloremque commodi, distinctio autem excepturi soluta hic praesentium quos saepe iure itaque non quasi minima dolore voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, consequuntur? Omnis sit dignissimos, quas praesentium consequuntur obcaecati quaerat, adipisci id quam eveniet expedita recusandae fuga iure incidunt deserunt et assumenda.</p>
     </main>
 </body>
 </html>
