Efeito Zebrado em Tabelas

--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -24,6 +24,10 @@
         .num{
             text-align: right;
         }
+
+        tr:nth-child(even){
+            background-color: lightgray;/*Efeito-Zebrado*/
+        }
     </style>
 </head>
 <body>
