--- a/Exercicios/ex024/index.html
+++ b/Exercicios/ex024/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Usos de iframe</h1>
-    <p>Link de um site aqui <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>em iframe</p>
+    <ul>
+        <li>Link para a <a href="pagina002.html" target="frame">Pagina 002</a></li>
+        <li>Link para a <a href="pagina003.html" target="pag02">Pagina 003</a></li>
+        <li>Link para a <a href="">Pagina 004</a></li>
+    </ul>
+    <p>Abaixo</p>
+    <iframe src="pagina002.hmtl" frameborder="0" name="frame"></iframe>
+    <iframe src="pagina003.html" frameborder="0" name="pag02"></iframe>
 </body>
 </html>
