--- a/Exercicios/ex024/index.html
+++ b/Exercicios/ex024/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Link para a <a href="pagina002.html" target="frame">Pagina 002</a></li>
         <li>Link para a <a href="pagina003.html" target="pag02">Pagina 003</a></li>
-        <li>Link para a <a href="">Pagina 004</a></li>
+        <li>Link para a <a href="#">Pagina 004</a></li>
     </ul>
     <p>Abaixo</p>
     <iframe src="pagina002.hmtl" frameborder="0" name="frame"></iframe>
