--- a/Exercicios/ex025/index.html
+++ b/Exercicios/ex025/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
     <h1>Aprendendo como Utilizar Formulários</h1>
-    <form><!--Tag inicial do Formulário-->
-        <p>Nome <input type="text" name="nome" id="nome" value="Escreva seu nome"></p>
-        <p>Sobrenome <input type="text" name="sobrenome" id="sobrenome" value="Escreva seu sobrenome"></p>
+    <form action="cadastro.php" autocomplete="off"><!--Tag inicial do Formulário-->
+        <!--Informações a serem colocadas-->
+        <p><label for="inome">Nome</label><!--Identifica que o input é relacionado ao nome--> 
+            <input type="text" name="nome" id="inome"></p>
+
+        <p><label for="isobrenome">Sobrenome </label><!--Label também aumenta a área clicável-->
+            <input type="text" name="sobrenome" id="isobrenome"></p>
+
         <input type="submit" value="Enviar">
     </form>
 </body>
