Continuação atividade com formulários

--- a/Exercicios/ex025/index.html
+++ b/Exercicios/ex025/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Aprendendo como Utilizar Formulários</h1>
-    <form action="cadastro.php" autocomplete="off"><!--Tag inicial do Formulário-->
+    <form action="cadastro.php" autocomplete="off" method="post"><!--Tag inicial do Formulário-->
         <!--Informações a serem colocadas-->
         <p><label for="inome">Nome</label><!--Identifica que o input é relacionado ao nome--> 
             <input type="text" name="nome" id="inome"></p>
