--- a/Exercicios/ex025/form002.html
+++ b/Exercicios/ex025/form002.html
@@ -6,7 +6,7 @@
     <title>Segundo teste de Formulario</title>
 </head>
 <body>
-    <form action="cadastro.php" method="post" autocomplete="on">
+    <form method="post" autocomplete="on">
 
         <p><label for="iusu" ></label>Usuário:<input type="text" name="usu" id="iusu" required placeholder="Nome de Usuário" ></p>
         
@@ -17,7 +17,6 @@
         <p><input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
-        
 
     </form>
 </body>
